--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "QR Scanner",
+  "lang": "en",
+  "short_name": "QR Code Scanner",
   "name": "QR Code Scanner",
-  "description": "QR code scanner progressive web application",
-  "display": "standalone",
-  "orientation": "portrait",
   "icons": [
-	{
-		"src": "/images/touch/android-chrome-192x192.png",
-		"sizes": "192x192",
-		"type": "image/png"
-	},
-  {
-    "src": "/images/touch/android-chrome-512x512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }],
-  "start_url": "/index.html?utm_source=homescreen",
-  "theme_color": "#e4e4e4",
-  "background_color": "#fff"
+    {
+      "src": "\/assets\/images\/icons\/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image\/png"
+    },
+    {
+      "src": "\/assets\/images\/icons\/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image\/png"
+    }
+  ],
+  "start_url": "./",
+  "theme_color": "#3f51b5",
+  "background_color": "#3f51b5",
+  "display": "standalone"
 }
